# samogonki-srv

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: game.rs  lib.rs  player.rs  prelude.rs  turn.rs  user.rs
entity/src/game/: world.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user.rs  m20240113_134047_create_game.rs  m20240113_140000_create_turn.rs  main.rs
src/: api.rs  data.rs  game.rs  main.rs  manager.rs  session.rs  state.rs
src/handlers/: archive.rs  auth.rs  game.rs  index.rs  mod.rs  rating.rs  samogonki.rs  users.rs
src/handlers/game/: list.rs  new.rs  view.rs
src/middleware/: mod.rs
static/: samogonki.css
templates/: archive.html  base.html  error.html  index.html  rating.html
templates/games/: list.html  new.html  view.html
templates/users/: list.html  view.html
tests/: db.rs  db_test.rs  samogonki-api-2_test.rs
tests/common/: mod.rs  tapi.rs
