[package]
name = "samogonki-srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = { version = "4.4.1" }
actix-web-lab = "0.20.1"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
base64 = "0.21.7"
chrono = "^0.4"
dotenvy = "0.15.7"
entity = { path = "./entity" }
enum-primitive-derive = "0.3.0"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.17"
migration = { path = "./migration" }
num-traits = "0.2.17"
rand = "0.8.5"
sea-orm = { version = "^0.12.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
    "debug-print",
    "serde_json",
] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
steam-connect = "1.3.0"
thiserror = "1.0.49"
tokio = { version = "1", features = ["full"] }

[features]
