[package]
name = "migration"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["full"] }
entity = { path = "../entity"}
#log = "0.4.17"
#env_logger = "0.10.1"
tracing-subscriber = "0.2"
tracing = "0.1"

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",         # `DATABASE_DRIVER` feature
]

[dependencies.sea-orm]
features = ["debug-print"]
